# calibre-ingest

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  nginx.conf  start.sh
.github/workflows/: build-docker.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/routes/: +page.svelte
